--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@ libseccomp: Releases
 ===============================================================================
 https://github.com/seccomp/libseccomp
 
+* Version 2.5.4 - April 21, 2022
+- Update the syscall table for Linux v5.17
+- Fix minor issues with binary tree testing and with empty binary trees
+- Minor documentation improvements including retiring the mailing list
+
 * Version 2.5.3 - November 5, 2021
 - Update the syscall table for Linux v5.15
 - Fix issues with multiplexed syscalls on mipsel introduced in v2.5.2
