docs: fix typo in seccomp_rule_add manpage
Signed-off-by: Felix Geyer <debfx@fobos.de>
Acked-by: Tom Hromatka <tom.hromatka@oracle.com>
Signed-off-by: Paul Moore <paul@paul-moore.com>

--- a/doc/man/man3/seccomp_rule_add.3
+++ b/doc/man/man3/seccomp_rule_add.3
@@ -222,7 +222,7 @@ When a filter utilizing
 is loaded into the kernel, the kernel generates a notification fd that must be
 used to communicate between the monitoring process and the process(es) being
 filtered.  See
-.B seccomp_notif_fd (3)
+.B seccomp_notify_fd (3)
 for more information.
 
 .P
