--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,8 +2,14 @@ libseccomp: Releases
 ===============================================================================
 https://github.com/seccomp/libseccomp
 
+* Version 2.5.6 - January 24, 2025
+- Update the syscall table for Linux v6.13
+- Fix a bug where the internal filter state could be corrupted when a filter
+  rule addition fails
+- Fix potential memory leak in the internal management of filter snapshots
+
 * Version 2.5.5 - December 1, 2023
-* Update the syscall table for Linux v6.7-rc3
+- Update the syscall table for Linux v6.7-rc3
 
 * Version 2.5.4 - April 21, 2022
 - Update the syscall table for Linux v5.17
