--- a/doc/man/man1/scmp_sys_resolver.1
+++ b/doc/man/man1/scmp_sys_resolver.1
@@ -36,7 +36,8 @@ The architecture to use for resolving the system call.  Valid
 .I ARCH
 values are "x86", "x86_64", "x32", "arm", "aarch64", "loongarch64", "m68k",
 "mips", "mipsel", "mips64", "mipsel64", "mips64n32", "mipsel64n32", "parisc",
-"parisc64", "ppc", "ppc64", "ppc64le", "s390", "s390x", "sheb" and "sh".
+"parisc64", "ppc", "ppc64", "ppc64le", "s390", "s390x", "sparc", "sparc64",
+"sheb" and "sh".
 .TP
 .B \-t
 If necessary, translate the system call name to the proper system call number,
